--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,8 +21,8 @@ jobs:
     - name: Install dependencies
       run: npm install  # Change for Python/Java/.NET
 
-    - name: Build project
-      run: npm run build  # Skip this if no build step
+#    - name: Build project
+#      run: npm run build  # Skip this if no build step
 
     - name: Login to Azure
       uses: azure/login@v1
