--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -25,9 +25,16 @@ jobs:
 #      run: npm run build  # Skip this if no build step
 
     - name: Login to Azure
-      uses: azure/login@v1.6.1
+    - uses: azure/login@v2
       with:
         creds: ${{ secrets.AZURE_CREDENTIALS }}
+    
+    - name: Azure CLI script
+      uses: azure/cli@v2
+      with:
+        azcliversion: latest
+        inlineScript: |
+          az account show
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
