--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,16 +21,13 @@ jobs:
     - name: Install dependencies
       run: npm install  # Change for Python/Java/.NET
 
+    - name: Save Azure Credentials to a File
+      run: echo '${{ secrets.AZURE_CREDENTIALS }}' > azure-credentials.json
+
     - name: Login to Azure
       uses: azure/login@v2
       with:
-        creds: > 
-          {
-            "clientId": "${{ secrets.AZURE_CLIENT_ID }}",
-            "clientSecret": "${{ secrets.AZURE_CLIENT_SECRET }}",
-            "subscriptionId": "${{ secrets.AZURE_SUBSCRIPTION_ID }}",
-            "tenantId": "${{ secrets.AZURE_TENANT_ID }}"
-          }
+        creds: $(cat azure-credentials.json)
 
     - name: Azure CLI script
       uses: azure/cli@v2
