--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -21,13 +21,12 @@ jobs:
     - name: Install dependencies
       run: npm install  # Change for Python/Java/.NET
 
-    - name: Save Azure Credentials to a File
-      run: echo '${{ secrets.AZURE_CREDENTIALS }}' > azure-credentials.json
-
     - name: Login to Azure
       uses: azure/login@v2
+      env:
+        AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
       with:
-        creds: $(cat azure-credentials.json)
+        creds: $AZURE_CREDENTIALS
 
     - name: Azure CLI script
       uses: azure/cli@v2
