--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -23,10 +23,8 @@ jobs:
 
     - name: Login to Azure
       uses: azure/login@v2
-      env:
-        AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
       with:
-        creds: $AZURE_CREDENTIALS
+        creds: ${{ secrets.AZURE_CREDENTIALS }}  # Pass the secret directly
 
     - name: Azure CLI script
       uses: azure/cli@v2
